Show Randomized Meals in List
Kotlin updated to 1.4.20
Added initial meals list to assets for first time use.
Added initial UseCase classes and associated Koin module.
Updated Meal data class to autoincrement the `id` Primary Key value.
Added Action sealed class to help with app state.
Added Adapter and ViewHolder for RecyclerView population.
Added functions for list randomization and population.

--- a/mealrandomizer/build.gradle
+++ b/mealrandomizer/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation libs.koinViewModel
     implementation libs.room
     implementation libs.roomKtx
+    implementation libs.okhttp
     kapt libs.roomKapt
 
     testImplementation libs.junit
