--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ buildscript {
                 'jsoup'             : '1.11.3',
                 'junit'             : '4.12',
                 'koin'              : '2.1.6',
-                'kotlin'            : '1.4.10',
+                'kotlin'            : '1.4.20',
                 'ktlint'            : '0.24.0',
                 'legacyCoreUtils'   : '1.0.0',
                 'lifecycle'         : '2.1.0',
@@ -73,7 +73,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.0"
+        classpath 'com.android.tools.build:gradle:4.1.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlin}"
 
         // NOTE: Do not place your application dependencies here; they belong
